k8s/app/api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: events-api
  namespace: events
  labels:
    app: events-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: events-api
  template:
    metadata:
      labels:
        app: events-api
    spec:
      containers:
        - name: events-api
          image: 596517178555.dkr.ecr.eu-west-1.amazonaws.com/cloud-event-processing-platform-dev-api:dev
          imagePullPolicy: Always
          ports:
            - containerPort: 5000
          livenessProbe:
            httpGet:
              path: /health
              port: 5000
            initialDelaySeconds: 10
            periodSeconds: 10
            timeoutSeconds: 2
            failureThreshold: 3
          readinessProbe:
            httpGet:
              path: /ready
              port: 5000
            initialDelaySeconds: 5
            periodSeconds: 5
            timeoutSeconds: 2
            failureThreshold: 3
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 250m
              memory: 256Mi
