k8s/app/api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: events-service
  namespace: events
  labels:
    app: events-api
spec:
  selector:
    app: events-api
  ports:
    - name: http
      port: 80
      targetPort: 5000
  type: ClusterIP
